<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidMeeGos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
    <string name="title_section1">Historial</string>
    <string name="title_section2">Contactos</string>
    <string name="title_activity_preference">Preferencias</string>
    <string name="options_menu_Preferences">Preferencias</string>
    <string name="pref_menu_category_contacts">Preferencias de lista de contactos</string>
    <string name="pref_menu_category_history">Preferencias de historial</string>
    <string name="pref_menu_category_contacts_ordenar">Orden de contactos</string>
    <string name="pref_menu_category_contacts_filtrar">Filtrar contactos por:</string>
    <string name="pref_menu_category_contacts_ordenar_Alfabetico">Orden descendente</string>

    <string-array name="filtros_contacto">
        <item>Telefono</item>
        <item>Mail</item>
        <item>Web</item>
    </string-array>
    <string-array name="filtros_contacto_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_menu_category_history_ordenar_Alfabetico">Orden descendente</string>
    <string name="pref_menu_category_history_filtrar">Filtrar historial por:</string>

    <string-array name="filtros_historial">
        <item>Llamada</item>
        <item>Mail</item>
        <item>SMS</item>
    </string-array>
    <string-array name="filtros_historial_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_pantalla_historial_contacto">PantallaHistorialContacto</string>
    <string name="title_activity_pantalla_mee_gos">PantallaMeeGos</string>

</resources>